# arduino-place

./: README.md  arduino-place.code-workspace
arduino-place-embedded/: platformio.ini  secrets.example.ini
arduino-place-embedded/src/: globals.h  main.cpp  ws.cpp  ws.h
arduino-place-server/: Cargo.toml  README.md  Shuttle.toml
arduino-place-server/public/: index.html
arduino-place-server/src/: lib.rs  main.rs  ws.rs
arduino-place-server/src/led_array/: mod.rs  persisted.rs
arduino-place-server/static/assets/: index-CdMQJesO.js  index-I90IbdHy.css
arduino-place-spa/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
arduino-place-spa/src/: App.tsx  main.tsx
arduino-place-spa/src/api/: rest.ts
arduino-place-spa/src/hooks/: useEasel.ts  useLeds.ts
arduino-place-spa/src/providers/: MouseProvider.tsx
