[package]
name = "arduino-place-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-routing"] }
axum-macros = "0.4.2"
axum-valid = "0.21.0"
derive_more = { version = "1.0.0", features = ["display"] }
futures = "0.3.31"
serde = "1.0.215"
serde_json = "1.0.133"
shuttle-axum = "0.49.0"
shuttle-persist = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
validator = { version = "0.19.0", features = ["derive"] }
